recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:31: error: not found: value aquareSide
    aquareSide(levels-1,length/(3))  
    ^